Progress? Blurred photos, but new bug on datetime display

--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -176,3 +176,9 @@ div.button-list {
 div.button-list .rhs-button {
     float: right;
 }
+
+img.hidden-photo {    
+    -webkit-filter: blur(10px);
+
+}
+
